Bug #27710 Creating unique index fails during single user mode - enable indexes to be used always, if in single user, reject will happen before, and if it is kerlel doing stuff, it should always be allowed